# RawMinecraft

./: .gitignore  CMakeLists.txt  README.md  RawMinecraft  test.txt
SFML-2.6.2/include/SFML/Graphics/: Shape.hpp  Sprite.hpp  Text.hpp
assets/images/: OakPlanks.pdn
assets/models/: Playermodel.bbmodel  Playermodel.gltf
assets/shaders/: Image2D.vert.spv  Point2D.frag  Point2D.vert  Point2D.vert.spv  chunk.frag  chunk.frag.spv  chunk.vert  chunk.vert.spv  cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  font2D.frag  font2D.frag.spv  font2D.vert  fragment.glsl  margin.frag  margin.frag.spv  margin.vert  margin.vert.spv  model.vert  model.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeLists.txt
include/: Application.h  General.h  Global.h  IncludePath.h  InfoCenter.h  SettingPackage.h
include/Extended/: file_extended.h  number_extended.h  spriv_extended.h  string_extended.h
include/Form/: GameForm.h
include/Logic/: Data.h  DataCenter.h  DataStorage.h  HashTable.h  Id.h  IdStorage.h  NameStorage.h
include/UI/: Alarm.h  Application.h  BaseShape.h  Block.h  Button.h  Camera.h  Charactor.h  Chunk.h  Circle.h  Clock.h  Command.h  Container.h  Container3D.h  Controller.h  Controller3D.h  Coordinate.h  Cube.h  Font.h  Form.h  Form3D.h  HitBoxCenter.h  Label.h  Line.h  Message.h  Model.h  ModelController.h  ModelLoader.h  ModelStorage.h  Plane.h  PlayerModel.h  PlayerModelController.h  PointSet.h  Ray.h  Rect3D.h  Rectangle.h  RoundedRectangle.h  Segment.h  ShaderStorage.h  ShapeShow.h  SuggestionList.h  (+6 more)
report/: hcmus-report-template.sty  main.fdb_latexmk  main.fls  main.tex  vietnam.sty  xelatex9709.fls
report/content/: Appendix.tex  Conclusion.tex  DataStorage.tex  FeatureDemonstrate.tex  GroupInfor.tex  ImplementationDetails.tex  TechnicalProblems.tex  introduction.tex  project_architexture.tex  srccode.tex  title.tex
report/content/include/: AVLNode.h.tex  AVLTree.h.tex  AboutUsForm.h.tex  Application.h.tex  Bubble.h.tex  Button.h.tex  Clock.h.tex  ColorBox.h.tex  ColorPointer.h.tex  CommandCode.h.tex  CommandLists.h.tex  Console.h.tex  Container.h.tex  Controller.h.tex  DSU.h.tex  DijkstraMargin.h.tex  DynamicColorCircle.h.tex  Edge.h.tex  EmptyButton.h.tex  FileDropBox.h.tex  Form.h.tex  FormStart.h.tex  GIF.h.tex  GUI.h.tex  General.h.tex  Global.h.tex  Graph.h.tex  HeapVisual.h.tex  ImageTab.h.tex  IncludePath.h.tex  Label.h.tex  LabelExtra.h.tex  LinearHashTable.h.tex  Menu.h.tex  MenuBox.h.tex  MenuTab.h.tex  MinHeap.h.tex  Move.h.tex  MoveButton.h.tex  MoveContainer.h.tex  (+19 more)
report/ref/: ref.tex
source/: Application.cpp  General.cpp  InfoCenter.cpp  SettingPackage.cpp  main.cpp
source/Extended/: file_extended.cpp  number_extended.cpp  spriv_extended.cpp  string_extended.cpp
source/FormDesign/: GameForm.design.cpp
source/FormLogic/: Application.cpp
source/Logic/: Data.cpp  DataCenter.cpp  DataStorage.cpp  HashTable.cpp  Id.cpp  IdStorage.cpp  NameStorage.cpp
source/UI/: Alarm.cpp  BaseShape.cpp  Block.cpp  Button.cpp  Camera.cpp  Chunk.cpp  Circle.cpp  Clock.cpp  Container.cpp  Container3D.cpp  Controller.cpp  Controller3D.cpp  Coordinate.cpp  Cube.cpp  Font.cpp  Form.cpp  Form3D.cpp  General.cpp  HitBoxCenter.cpp  Label.cpp  Line.cpp  Message.cpp  Model.cpp  ModelController.cpp  ModelLoader.cpp  ModelStorage.cpp  Plane.cpp  PlayerModel.cpp  PlayerModelController.cpp  PointSet.cpp  Ray.cpp  Rect3D.cpp  Rectangle.cpp  RoundedRectangle.cpp  Segment.cpp  ShaderStorage.cpp  ShapeShow.cpp  SuggestionList.cpp  TextEditor.cpp  Textbox.cpp  (+4 more)
